# sidh-rs

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  appveyor.yml  build.rs
sage/: Makefile  README.md  kummer_weierstrass_equivalence.sage  optimal_strategies.sage  sidh.sage  sidh_compression.sage  sidh_curve_and_isogeny_arithmetic.sage  sidh_field_arithmetic.sage  sidh_pairings.sage  sidh_parameters.sage  sidh_pohlig_hellman.sage  test_sidh.sage
src/: constants.rs  consts.rs  curve.rs  field.rs  field_amd64.S  fp.rs  isogeny.rs  lib.rs  sidh.rs
src/amd64/: fp_x64.S  fp_x64.asm  util_x64.S  util_x64.asm
src/backend/: mod.rs
src/backend/x64/: fp_x64.rs  mod.rs
src/backend/x64/amd64/: fp_x64.S  fp_x64.asm  util_x64.S  util_x64.asm
src/backend/x86/: fp_x86.rs  mod.rs
