[package]
name = "sidh"
version = "0.1.0"
authors = ["Erkan Tairi <erkan.tairi@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/etairi/sidh-rs/"
homepage = "https://github.com/etairi/sidh-rs/"
documentation = "https://docs.rs/sidh"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "elliptic", "curve", "isogeny", "SIDH", "ECC"]
description = "An efficient supersingular isogeny-based cryptography library."
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
]
build = "build.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./rustdoc-include-katex-header.html"]

[badges]
appveyor = { repository = "sidh-rs", branch = "master", service = "github" }
travis-ci = { repository = "etairi/sidh-rs", branch = "master" }

[profile.bench]
debug = true

[build-dependencies]
cc = "1.0.3"
subtle = "^0.3"
rand = "0.3"

[dependencies.quickcheck]
version = "0.5"

[dependencies.rand]
optional = true
version = "0.3"

[dependencies.subtle]
version = "^0.3"
default-features = false

[features]
nightly = ["subtle/nightly"]
default = ["std"]
std = ["rand", "subtle/std"]
bench = []
