[package]
name = "sidh"
version = "0.2.2"
authors = ["Erkan Tairi <erkan.tairi@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/etairi/sidh-rs/"
homepage = "https://github.com/etairi/sidh-rs/"
documentation = "https://docs.rs/sidh"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "elliptic", "curve", "isogeny", "SIDH"]
description = "An efficient supersingular isogeny-based cryptography library."
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
]
build = "build.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/registry/src/github.com-1ecc6299db9ec823/sidh-0.1.0/rustdoc-include-katex-header.html"]

[badges]
appveyor = { repository = "etairi/sidh-rs", branch = "master", service = "github" }
travis-ci = { repository = "etairi/sidh-rs", branch = "master" }

[profile.bench]
debug = true

[build-dependencies]
cc = "^1.0.71"
rand = "^0.8.0"
subtle = "^2.4.1"

[dependencies.quickcheck]
version = "^1.0"

[dependencies.heapless]
version = "^0.7.7"

[dependencies.rand]
version = "^0.8.0"
default-features = false

[dependencies.rand_core]
version = "^0.6"
default-features = false

[dependencies.subtle]
version = "^2.4.1"
default-features = false

[features]
nightly = ["subtle/nightly"]
default = ["std"]
std = ["rand/std", "subtle/std", "rand_core/std"]
bench = []
