[package]
name = "sidh"
version = "0.2.3-zerotier"
authors = ["Erkan Tairi <erkan.tairi@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/etairi/sidh-rs/"
homepage = "https://github.com/etairi/sidh-rs/"
documentation = "https://docs.rs/sidh"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "elliptic", "curve", "isogeny", "SIDH"]
description = "An efficient supersingular isogeny-based cryptography library."
exclude = [
    ".gitignore",
    ".travis.yml",
]

[dependencies]
heapless = "^0"
subtle = "^2"
rand_core = "0.5.0"

[dev-dependencies]
rand = "^0"
quickcheck = "^1"
